crates/keron-lang/tests/corpus/errors/parse/reconcile_block_empty.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found '}' expected something else, '#', '-', '"', '"true"', '"false"', int, '[', '{', '"if"', '"for"', identifier, or '('
  --> 1:13
  |
1 | reconcile { }
  |             ^
